# opencv_demo

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/file_tool/: file_tool.h
core/opencv_tool/: opencvTool.cpp  opencvTool.h  opencv_IO.cpp  opencv_IO.h  opencv_algo.cpp  opencv_algo.h  opencv_blob.cpp  opencv_blob.h  opencv_drawer.cpp  opencv_drawer.h  opencv_filter.cpp  opencv_filter.h  opencv_global.h  opencv_transform.cpp  opencv_transform.h
data/: color_1.jpg.aux.xml
data/two_eyes/: 双目标定.hdev
docs/: 笔记.md
src/: CMakeLists.txt  main.cpp  testA.cpp
src/opencv_tool/: CMakeLists.txt  opencvTool.cpp  opencvTool.h  project.cpp  project.h
src/tool_dir_name/: CMakeLists.txt
